After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699361 - gio: fix small leak
gio: fix small leak
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-05-01 00:44 UTC by darkxst
Modified: 2013-05-01 01:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gio: fix small leak (691 bytes, patch)
2013-05-01 00:44 UTC, darkxst
committed Details | Review

Description darkxst 2013-05-01 00:44:49 UTC
==19367== 610 bytes in 21 blocks are definitely lost in loss record 10,503 of 10,979
==19367==    at 0x4C2CD7B: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==19367==    by 0xC3D279F: standard_malloc (gmem.c:85)
==19367==    by 0xC3D2828: g_malloc (gmem.c:159)
==19367==    by 0xC3B6054: g_path_get_basename (gfileutils.c:2344)
==19367==    by 0xB49447E: g_desktop_app_info_load_file (gdesktopappinfo.c:427)
==19367==    by 0xB494584: g_desktop_app_info_new_from_filename (gdesktopappinfo.c:482)
==19367==    by 0xB494612: g_desktop_app_info_new (gdesktopappinfo.c:526)
==19367==    by 0x44F3D9: cc_panel_loader_fill_model (cc-panel-loader.c:207)
==19367==    by 0x44C61B: setup_model (cc-window.c:919)
==19367==    by 0x44DC13: create_main_page (cc-window.c:1486)
==19367==    by 0x44E064: create_window (cc-window.c:1554)
==19367==    by 0x44E250: cc_window_init (cc-window.c:1587)

desktop_id is previously allocated in g_desktop_app_info_load_file.
Comment 1 darkxst 2013-05-01 00:44:51 UTC
Created attachment 242975 [details] [review]
gio: fix small leak
Comment 2 Emmanuele Bassi (:ebassi) 2013-05-01 00:52:26 UTC
Review of attachment 242975 [details] [review]:

looks okay to me.
Comment 3 darkxst 2013-05-01 01:15:36 UTC
Attachment 242975 [details] pushed as daf7f56 - gio: fix small leak