gio: fix small leak

https://bugzilla.gnome.org/show_bug.cgi?id=699361